--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.config.import=custom.properties
 
+# static folder for react
+spring.web.resources.static-locations=classpath:/static,classpath:/frontend
+
